...
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="vHc-1O-xss">
                                        <rect key="frame" x="0.0" y="27.5" width="288" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="searchTextField">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="QDc-Bm-4UT"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y43-F9-uId">
                                        <rect key="frame" x="0.0" y="65.5" width="96" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="searchButton">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <state key="normal" title="Search Giphy!"/>
                                        <connections>
                                            <segue destination="yRf-Bx-hDd" kind="show" id="cne-bp-dIo"/>
                                        </connections>
...
                                    <outlet property="remoteImageView" destination="YxB-gJ-u4v" id="oL9-ix-z9e"/>
                                    <segue destination="CvE-Cs-FxN" kind="show" id="9Af-vC-Qc9"/>
                                </connections>
                            </collectionViewCell>
                        </cells>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="resultCollectionView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="yRf-Bx-hDd" id="g6R-n0-cUi"/>
                            <outlet property="delegate" destination="yRf-Bx-hDd" id="X6a-D6-ULU"/>
                        </connections>
                    </collectionView>
...
                                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <wkWebViewConfiguration key="configuration">
                                            <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                            <wkPreferences key="preferences"/>
                                        </wkWebViewConfiguration>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="resultWebView"/>
                                        </userDefinedRuntimeAttributes>
                                    </wkWebView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="svV-a2-qah" firstAttribute="leading" secondItem="JSz-YE-4Aj" secondAttribute="leading" id="9BX-Gq-tDh"/>
                                    <constraint firstAttribute="trailing" secondItem="T2v-3p-qTK" secondAttribute="trailing" id="C3R-xj-SPG"/>
...
